# haruhifanclub-website

./: .coderabbit.yaml  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  commitlint.config.mjs  eslint.config.js  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  labeler.yml  pr-checks.yml  release.yml
apps/art/: README.md  index.html  package.json  vite.config.js
apps/art/public/: haruhi-background.txt
apps/art/src/: App.vue  main.js  style.css
apps/art/src/components/: AdvancedFilterBar.vue  ArtSpatialField.vue  ArtworkGrid.vue  ArtworkMasonryFeed.vue  ArtworkModal.vue  ArtworkPopularityBadge.vue  ArtworkPreviewFrame.vue  ArtworkShelf.vue  CuratedGalleryHome.vue  FilterPanel.vue  GalleryCatalog.vue  GalleryPagination.vue  JustifiedArtworkGrid.vue  SiteFooter.vue  TopBar.vue
apps/art/src/composables/: uploadDraft.js  useUser.js
apps/art/src/config/: ui.js
apps/art/src/mock/: seedData.js
apps/art/src/router/: index.js
apps/art/src/services/: api.js  auth.js  recommendationTracker.js
apps/art/src/stores/: galleryStore.js
apps/art/src/utils/: artworkDepth.js  artworkLicenses.js  imageCompressor.js  incrementalMasonry.js  incrementalMasonry.test.js  likeHeartBurst.js  uiSound.js
apps/art/src/views/: AdminView.vue  AdventurerProfileView.vue  AnnouncementView.vue  ArtworkDetailView.vue  CreatorsView.vue  HomeView.vue  (+6 more)
apps/chapter/: index.html  package.json  vite.config.js
apps/chapter/src/: App.vue  api.js  main.js  style.css
apps/console/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/console/src/: App.vue  api.ts  main.ts  router.ts  style.css
apps/design-system/: index.html  package.json  vite.config.js
apps/design-system/src/: App.vue  main.js  style.css
apps/download/: index.html  package.json  vite.config.js
apps/download/src/: App.vue  api.js  main.js  style.css
apps/exam/: README.md  env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/exam/src/: App.vue  main.ts
apps/fiction/: README.md  index.html  package.json  vite.config.js
apps/fiction/src/: App.vue  api.js  main.js  style.css
apps/news/: README.md  index.html  package.json  vite.config.js  vitest.config.js
apps/news/src/: App.vue  main.js  style.css
apps/novel/: README.md  index.html  package.json  vite.config.js
apps/novel/src/: App.vue  main.js
apps/shop/: README.md  index.html  package.json  vite.config.js
apps/shop/src/: main.js
apps/voice/: index.html  package.json  vite.config.js
apps/voice/src/: App.vue  api.js  main.js  style.css
backend/crates/ai/: Cargo.toml  README.md
backend/crates/auth/: Cargo.toml  README.md
backend/crates/auth/src/: lib.rs  session.rs
backend/crates/core/: Cargo.toml  README.md
backend/crates/db/: Cargo.toml  README.md  build.rs
backend/crates/mail/: Cargo.toml  README.md
backend/crates/media/: Cargo.toml  README.md
backend/crates/media/src/: audio.rs  epub_ops.rs  image_ops.rs  lib.rs  upload.rs
backend/crates/server/: Cargo.toml  README.md
backend/crates/server/src/: admin_routes.rs  auth_routes.rs  lib.rs  main.rs  me_routes.rs  middleware.rs  notify.rs  pagination.rs  passkey_routes.rs  ratelimit.rs  routes.rs  seed.rs  state.rs  totp_routes.rs
backend/crates/server/src/modules/: art.rs  art_guild.rs  chapter.rs  download.rs  exam.rs  fiction.rs  mod.rs  news.rs  novel.rs  voice.rs
backend/crates/server/src/modules/seo/: meta.rs  mod.rs  pages.rs  sitemap.rs  template.rs
backend/crates/server/src/modules/shop/: admin_orders.rs  common.rs  coupons.rs  email.rs  misc.rs  mod.rs  orders.rs  pricing.rs  products.rs
backend/crates/server/tests/: integration.rs
backend/migrations/art/: 0001_init.sql  0002_ugc_author.sql  0003_guild.sql  0004_announcements.sql  0005_guild_quest_auto_claim.sql  0006_visitor_session_window.sql  0007_gallery_performance.sql  0008_gallery_heavy_paths.sql  0009_guild_quest_cycles.sql  0010_guild_rating_auto_apply.sql  0011_guild_quest_repeat_on_complete.sql  0012_guild_claim_active_unique.sql  0013_guild_manual_claim_review.sql  0014_points_source_type.sql  0015_guild_budget_supplies.sql  0016_art_reward_settings.sql  0016_guild_quest_claim_artworks.sql  0018_guild_redemption_notes.sql  0019_guild_reward_categories.sql  0020_guild_access_applications.sql  0021_gallery_recommendations.sql  0022_recommendation_retention.sql  0023_artwork_popularity.sql  0024_creator_exhibits.sql  0025_creator_profile_messages.sql  0026_social_graph.sql  0027_cookie_engagement.sql
backend/migrations/chapter/: 0001_init.sql  0002_single_logo.sql  0003_membership_timeline_events.sql  0004_remove_region_timezone.sql  0005_merchandise.sql
backend/migrations/core/: 0001_init.sql  0002_user_email.sql  0003_user_accounts.sql  0004_no_email_verification.sql  0005_passkey.sql  0006_nickname_required_unique.sql  0007_branch_capability_grants.sql  0008_chapter_timeline_capabilities.sql
backend/migrations/exam/: 0001_init.sql  0002_ugc_author.sql
backend/migrations/fiction/: 0001_init.sql
backend/migrations/news/: 0001_init.sql  0002_ugc_author.sql  0003_redemptions.sql  0004_article_header_note.sql
backend/migrations/novel/: 0001_init.sql
backend/migrations/shop/: 0001_init.sql
deploy/: backfill-thumbs.sh  backup.sh  chapter.haruyuki.cn.nginx.conf  chapter.test.haruyuki.cn.nginx.conf  deploy.sh  env.sample  gen-secrets.sh  haruhifanclub-backup.service  haruhifanclub-backup.timer  haruhifanclub-test.service  haruhifanclub.service  migrate-data.sh  migrate-live.py  migrate-news.py  nginx.conf  pull-live.sh  test.haruyuki.cn.nginx.conf
docs/: ADDING_MODULE.md  ARCHITECTURE.md  CHAPTER.md  COLLABORATION.md  DEPLOYMENT.md  DESIGN_SYSTEM.md
scripts/: check-design-system.mjs  check-news-visual.mjs  check-shop-visual.mjs  start-art-interactive.mjs  sync-art-public-snapshot.mjs
(+171 files in other folders)
