[package]
name = "haruhi-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
haruhi-core.workspace = true
sqlx.workspace = true
axum.workspace = true
serde.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
tracing.workspace = true
