[package]
name = "haruhi-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
haruhi-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
image.workspace = true
webp.workspace = true
epub.workspace = true
md-5.workspace = true
base64.workspace = true
