[package]
name = "haruhi-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "haruhi-server"
path = "src/main.rs"

[dependencies]
haruhi-core.workspace = true
haruhi-db.workspace = true
haruhi-auth.workspace = true
haruhi-media.workspace = true
haruhi-ai.workspace = true
haruhi-mail.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
uuid = { workspace = true }
base64.workspace = true

[dev-dependencies]
# 集成测试：tower oneshot 打路由、http-body-util 读响应体、tempfile 建临时数据目录
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
